Fix section overflow adding scroll to main container

--- a/app/(main)/components/AddFriend/styles.module.scss
+++ b/app/(main)/components/AddFriend/styles.module.scss
@@ -1,6 +1,12 @@
 .add-friend {
   padding: 1.5rem;
   width: 75%;
+  flex: 1;
+  height: 100%;
+  overflow: hidden;
+  max-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .title {
