--- a/app/(main)/components/FriendsNavbar/styles.module.scss
+++ b/app/(main)/components/FriendsNavbar/styles.module.scss
@@ -5,6 +5,7 @@
   padding: 1rem 1.5rem;
   width: 100%;
   overflow-x: auto;
+  flex: 0 0 auto;
 }
 
 .title {
