--- a/app/(main)/page.module.scss
+++ b/app/(main)/page.module.scss
@@ -4,7 +4,10 @@
   background-color: var(--bg-main);
   flex: 1;
   width: 100%;
+  height: 100%;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .hidden {
